Refactor carrier border avoidance logic to improve passive maneuvering and update avoidance thresholds.